--- a/data/fixtures/fixtures.yml
+++ b/data/fixtures/fixtures.yml
@@ -30,7 +30,7 @@ JobeetJob:
     is_activated: true
     token:        job_sensio_labs
     email:        job@example.com
-    expires_at:   '2008-10-10'
+    expires_at:   '2018-02-03'
  
   job_extreme_sensio:
     JobeetCategory:  design
@@ -56,4 +56,33 @@ JobeetJob:
     is_activated: true
     token:        job_extreme_sensio
     email:        job@example.com
-    expires_at:   '2008-10-10'
+    expires_at:   '2018-02-03'
+
+  expired_job:
+      JobeetCategory: programming
+      company:        Sensio Labs
+      position:       Web Developer
+      location:       Paris, France
+      description:    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      how_to_apply:   Send your resume to lorem.ipsum [at] dolor.sit
+      is_public:      true
+      is_activated:   true
+      created_at:     '2005-12-01 00:00:00'
+      token:          job_expired
+      email:          job@example.com
+
+<?php for ($i = 100; $i <= 130; $i++): ?>
+  job_<?php echo $i ?>:
+    JobeetCategory: programming
+    company:      Company <?= $i."\n" ?>
+    position:     Web Developer
+    location:     Paris, France
+    description:  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    how_to_apply: |
+      Send your resume to lorem.ipsum [at] company_<?= $i ?>.sit
+    is_public:    true
+    is_activated: true
+    token:        job_<?= $i."\n" ?>
+    email:        job@example.com
+
+<?php endfor ?>
