--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -18,6 +18,13 @@ job_show_user:
     id: \d+
     sf_method: [get]
 
+# module category rules
+category:
+  url: /category/:slug
+  class: sfDoctrineRoute
+  param: { module: category, action: show }
+  options: { model: JobeetCategory, type: object }
+
 # default rules
 homepage:
   url:   /
