--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -4,7 +4,12 @@
 # module job rules
 job:
   class: sfDoctrineRouteCollection
-  options: { model: JobeetJob }
+  options:
+    model: JobeetJob
+    column: token
+    object_actions: { publish: PUT, extend: PUT }
+  requirements:
+    token: \w+
 
 job_show_user:
   url:     /job/:company_slug/:location_slug/:id/:position_slug
