--- a/apps/frontend/config/routing.yml
+++ b/apps/frontend/config/routing.yml
@@ -29,6 +29,8 @@ category:
   class: sfDoctrineRoute
   param: { module: category, action: show }
   options: { model: JobeetCategory, type: object }
+  requirnments:
+    sf_format: (?:html|json)
 
 # default rules
 homepage:
